--- a/index.html
+++ b/index.html
@@ -634,10 +634,10 @@
             </label>
             <label class="checkbox-area">
               <input class="checkbox" type="checkbox" name="checkbox" value="agree">
-              <!-- <svg class="checkbox-icon" width="16px" height="15px">
+              <svg class="checkbox-icon" width="16px" height="15px">
                 <use href="./images/sprite.svg#icon-check"></use>
-              </svg> -->
-              <span class="checkbox-icon"></span>
+              </svg>
+              <!-- <span class="checkbox-icon"></span> -->
               <span class="checkbox-text">Соглашаюсь с рассылкой и принимаю<a href="" class="link checkbox-link">Условия договора</a></span>
             </label>
           <div class="sub-button-cent">
