Justifying footer button without positioning

--- a/portfolio.html
+++ b/portfolio.html
@@ -291,12 +291,12 @@
             <p class="footer-social-title">Подпишитесь на рассылку</p>
             <div class="footer-flex">
               <input class="footer-input" id="footer-mail" type="email" name="email" placeholder="E-mail">
-              <div class="footer-button">
-                <button class="footer-sub-but" type="submit">Подписаться</button>
-                <svg class="icon footer-icon icon-send" width="24px" height="24px">
-                  <use href="./images/sprite.svg#icon-send"></use>
-                </svg>
-              </div>
+                <button class="footer-button" type="submit">
+                  Подписаться
+                  <svg class="icon footer-icon icon-send" width="24px" height="24px">
+                    <use href="./images/sprite.svg#icon-send"></use>
+                  </svg> 
+                </button>
             </div>
           </form>
         </div>
