Change margin between inputs, delete corner of textarea

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
             </label>
             <label class="form-field">
               <span class="form-label">Комментарий</span>
-              <textarea class="form-input comment-input" name="feedback" rows="5" placeholder="Введите текст"></textarea>
+              <textarea class="form-input comment-input" type="text" name="feedback" placeholder="Введите текст"></textarea>
             </label>
             <label class="checkbox-area">
               <input class="checkbox" type="checkbox" name="checkbox" value="agree">
